--- a/style.css
+++ b/style.css
@@ -5,16 +5,27 @@
     font-family: sans-serif;
 }
 
+header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 88px;   
+    z-index: 1000;
+}
+
 /**navbar**/
 .nav-bar{
     height: 56px;
     display: flex;
-    /*position: fixed;*/
     width: 100%;
-    background-color: #e7e9eb;
+    background-color: #ffffff;
+    display: flex;
+    align-items: center;
 }
 
 .nav-a-left{
+    height: 56px;
     padding: 16px;
     color: black;
     text-decoration: none;
@@ -27,30 +38,38 @@
 
 .search{
     display: flex;
-    width: 150px;
-    align-items: center;
+    width: 175px;
+    height: 36px;
+    vertical-align: middle;
     margin-left: 25px;
     margin-right: 25px;
+    border: 1px solid rgb(151, 150, 150);
+    border-radius: 30px;
 }
 
 .search-bar{
-    padding: 5px 40px 5px 15px;
-    border: 1px solid rgb(151, 150, 150);
-    border-radius: 30px;
-    width: 100px;
-    height: 25px;
+    border: none;
+    width: 80px;
+    vertical-align: middle;
     font-style: italic;
     color: rgb(119, 118, 118);
     font-size: 16px;
+    margin: 5px 40px 5px 15px;
 }
 
 .search i{
     height: 34px;
     width: 34px;
     color: black;
+    padding: 8px;
 }
 
 .search-bar:focus{
+    outline: none;
+}
+
+.search:focus-within{
+    outline: none;
     border: 2px solid #04aa6d;
 }
 
@@ -71,6 +90,7 @@
 .nav-a-right:hover{
     background-color: rgb(248, 248, 248);
     border-radius: 15px;
+    padding: 10px;
 }
 
 .sign-in{
@@ -111,6 +131,7 @@
 
 /**hero upper**/
 .hero-upper{
+    margin-top: 88px;
     height: 470px;
     background-color: #282a35;
     padding: 80px 0px;
@@ -151,18 +172,24 @@
     display: flex;
 }
 
+.hero-upper-inp i{
+    color: white;
+}
+
 .hero-upper-inp input{
     height: 47px;
     width: 400px;
     padding: 10px 10px 10px 25px;
     border-left: 40%;
+    font-size: 16px;
+    font-weight: 700;
     color: rgb(94, 91, 91);
     border-radius: 20px 0px 0px 20px;
     border: none;
 }
 
 .hero-upper-inp input:focus{
-    border: none;
+    outline: none;
 }
 
 .hero-upper-inp button{
@@ -296,8 +323,8 @@
 /**content upper**/
 .content{
     background-color: #282a35;
-    height: 1000px;
-    padding: 64px 0px 0px 0px;
+    height: 700px;
+    padding: 50px 0px 0px 0px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -350,6 +377,7 @@
     padding: 36px 24px; 
     text-align: center;
     border-radius: 5px;
+    margin: 21px 32px;
 }
 
 .lcard1{
@@ -373,15 +401,26 @@
 }
 
 /**content small cards**/
-.slcard-div{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+.lcard-div{
+    display: grid;
+    grid-template-columns: auto auto;
+    align-content: center;
     justify-content: center;
     width: 100%;
-    height: 800px;
+    height: 280px;
     background-color: #282a35;
-    padding: 0px 0px;
+    padding-top: 40px;
+}
+
+.scard-div{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    align-content: center;
+    justify-content: center;
+    width: 100%;
+    height: 320px;
+    background-color: #282a35;
+    padding-bottom: 50px;
     
 }
 
@@ -436,11 +475,99 @@
 .content2{
     height: 800px;
     background-color: #e7e9eb;
+    padding: 64px 24px 90px;
+    text-align: center;
+}
+
+.content2 h1{
+    font-size: 65px;
+}
+
+.content2 h4{
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.content2 img{
+    height: 375px;
+    width: 980px;
+    margin: 16px 0px 20px;
+}
+
+.content2 button{
+    font-size: 20px;
+    background-color: #282a35;
+    color: white;
+    padding: 16px;
+    margin: 20px 266px;
+    text-align: center;
+    vertical-align: middle;
+    height: 62px;
+    width: 950px;
+    border-radius: 20px;
+    font-weight: 600;
+}
+
+.content2 button:hover{
+    background-color: black;
 }
 
 /*footer**/
 footer{
-    height: 580px;
+    height: 500px;
     background-color: #282a35;
-    color: white;
+    color: #dddddd;
+    padding: 40px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.foot-panel1{
+    color: #eae098;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 102px;
+}
+
+.foot-panel1 p:hover{
+    text-decoration: underline;
+}
+
+.foot-panel2{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 225px;
+}
+
+.foot-panel2 h5{
+    font-size: 18px;
+    margin: 10px 0px 20px;
+    width: 100px;
+}
+
+.foot-links{
+    width: 180px;
+    height: 225px;
+    padding: 0px 30px 0px 50px;
+}
+
+.foot-links ul{
+    font-size: 12px;
+    list-style: none;
+}
+
+.foot-links li:hover{
+    color: #eae098;
+}
+
+.foot-panel3{
+    font-size: 12px;
+    height: 75px;
+    text-align: center;
+    vertical-align: center;
+    margin-top: 100px;
 }
